# chorus-ai-dossier

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
configs/: v1.json  v1_ingest.json
docs/: index.html
src/chorus_ai/: cli.py
src/chorus_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chorus_ai/artifacts/: io.py  validate.py
src/chorus_ai/artifacts/schemas/: compiled_summary.schema.json  fact_list.schema.json  final_dossier.schema.json  ingestion_record.schema.json  summary.schema.json  verification_report.schema.json
src/chorus_ai/core/: config.py  errors.py  hashing.py  orchestrator.py  state_machine.py
src/chorus_ai/core/verification/: verify_summary_v1.py
src/chorus_ai/llm/: client.py
src/chorus_ai/stages/: compile.py  contextualize.py  export.py  extract.py  ingest.py  pdf_renderer.py  summarize.py  verify.py
src/chorus_ai/stages/prompts/: compile_system.txt  contextualize_system.txt  extract_system.txt  summarize_system.txt  verify_system.txt
src/chorus_ai/tests/: conftest.py  test_cli_failure.py  test_compile.py  test_contextualize.py  test_export.py  test_extract.py  test_ingest.py  test_llm_client.py  test_schemas.py  test_state_machine.py  test_summarize.py  test_verify.py
website/: generate.py
website/static/css/: style.css
website/templates/: base.html  index.html
